--- a/css2.css
+++ b/css2.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 1024px) {
+    h1 { font-size: 45px !important; }
+}
+
+
+
+
 h1
 {
   font-family:'Roboto', sans-serif;
