--- a/css2.css
+++ b/css2.css
@@ -1,3 +1,5 @@
+
+
 @media only screen and (max-width: 1024px) {
     h1 { font-size: 45px !important; }
 }
@@ -18,8 +20,8 @@ p
   color: #C3073F;
   font-size: 50px;
   text-shadow: 3px 3px #000000;
-}
 
+}
 
 body {
     margin: 0;
@@ -27,17 +29,28 @@ body {
     
 }
 
-
 a
 {
     position:absolute;
     top:10px;
     right: 10px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.p1{
+
+    position: absolute;
+    top:20px;
+    right: 0px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 
 
 }
+
 .wow
 {
   visibility: hidden;
 }
-
